--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "publisher": "litiany4",
   "categories": [
     "Other"
-	],
-	"repository": "https://github.com/umijs/plugin-model-vscode.git",
+  ],
+  "repository": "https://github.com/umijs/plugin-model-vscode.git",
   "activationEvents": [
     "workspaceContains:package.json"
   ],
@@ -39,6 +39,7 @@
     "webpack-cli": "^3.3.10"
   },
   "dependencies": {
-    "glob": "^7.1.6"
+    "glob": "^7.1.6",
+    "superagent": "^6.1.0"
   }
 }
