--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
     "module": "commonjs",
-    "target": "es6",
+		"moduleResolution": "node",
+		"target": "es2019",
     "outDir": "out",
     "lib": ["es6"],
     "sourceMap": true,
